--- a/index.html
+++ b/index.html
@@ -25,9 +25,17 @@
 
   <label>Company:</label>
   <div class="checkbox-group">
-    <label><input type="checkbox" name="company" value="Company A" /> Company A</label>
-    <label><input type="checkbox" name="company" value="Company B" /> Company B</label>
-    <label><input type="checkbox" name="company" value="Company C" /> Company C</label>
+<label><input type="checkbox" name="company" value="DENTSU ITALIA SPA" /> DENTSU ITALIA SPA</label>
+    <label><input type="checkbox" name="company" value="CARAT ITALIA SPA" /> CARAT ITALIA SPA</label>
+    <label><input type="checkbox" name="company" value="iPROSPECT ITALIA SPA" /> iPROSPECT ITALIA SPA</label>
+    <label><input type="checkbox" name="company" value="DENTSU DIGITAL SRL" /> DENTSU DIGITAL SRL</label>
+    <label><input type="checkbox" name="company" value="DENTSU CREATIVE SRL SB" /> DENTSU CREATIVE SRL SB</label>
+    <label><input type="checkbox" name="company" value="AMNET ITALIA SRL" /> AMNET ITALIA SRL</label>
+    <label><input type="checkbox" name="company" value="SIMPLE AGENCY SRL" /> SIMPLE AGENCY SRL</label>
+    <label><input type="checkbox" name="company" value="DENTSU TECH & SERVICES SRL" /> DENTSU TECH & SERVICES SRL</label>
+    <label><input type="checkbox" name="company" value="DENTSU X SRL" /> DENTSU X SRL</label>
+    <label><input type="checkbox" name="company" value="MERKLE ITALIA SRL (NEW LEGAL)" /> MERKLE ITALIA SRL (NEW LEGAL)</label>
+    <label><input type="checkbox" name="company" value="MMA TECHNOLOGIES LTD ITALIAN BRANCH" /> MMA TECHNOLOGIES LTD ITALIAN BRANCH</label>
   </div>
 
   <label>Supplier Legal Personality:</label>
