--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   input, select, textarea { width: 100%; padding: 6px; margin-top: 5px; }
   .checkbox-group, .multiple-choice { margin-top: 5px; }
   .checkbox-group label, .multiple-choice label {
-    font-weight: normal; display: inline-flex; align-items: center; margin-right: 15px;
+    font-weight: normal; display: inline-flex; align-items: center; margin-right: 20px;  white-space: nowrap;
   }
   .checkbox-group label input, .multiple-choice label input {
     margin-right: 5px;
