--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 </head>
 <body>
 
-<h2>Vendor Onboarding Form</h2>
+<header style="display: flex; align-items: center; margin-bottom: 20px; background-color: black; padding: 10px 20px; color: white;">
+  <img src="https://www.dentsu.com/assets/images/main-logo-alt.png" alt="Dentsu Logo" style="height: 40px; margin-right: 15px;" />
+  <h2 style="margin: 0; color: white; font-size: 48px;">Vendor Onboarding Form</h2>
+</header>
 
 <form action="https://your-backend-url.com/submit" method="POST" enctype="multipart/form-data">
 
