--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
 
 <header style="display: flex; align-items: center; margin-bottom: 20px; background-color: black; padding: 10px 20px; color: white;">
-  <img src="https://www.dentsu.com/assets/images/main-logo-alt.png" alt="Dentsu Logo" style="height: 30px; margin-right: 15px;" />
-  <h2 style="margin: 0; color: white; font-size: 48px;">Vendor Onboarding Form</h2>
+  <img src="https://www.dentsu.com/assets/images/main-logo-alt.png" alt="Dentsu Logo" style="height: 25px; margin-right: 15px;" />
+  <h2 style="margin: 0; color: white; font-size: 48px;">NEW VENDOR FORM RECORD</h2>
 </header>
 
 <form action="https://your-backend-url.com/submit" method="POST" enctype="multipart/form-data">
