--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h2 style="margin: 0; color: white; font-size: 45px;">NEW VENDOR FORM</h2>
 </header>
 
-<form action="https://your-backend-url.com/submit" method="POST" enctype="multipart/form-data">
+<form action="http://127.0.0.1:5000/submit" method="POST" enctype="multipart/form-data">
 
   <label for="request_by">Request made by:</label>
   <input type="email" id="request_by" name="request_by" required />
